<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.DetailActivity">

    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_favorite_border_24"
        app:fabSize="normal"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/favorite" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/img_item_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:context=".presentation.detail.DetailActivity"
        tools:showIn="@layout/activity_detail"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/stadium" />

            <TextView
                android:id="@+id/tv_stadium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:layout_marginEnd="16dp"/>
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/sosial_media" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                >
                <ImageButton
                    android:id="@+id/ib_instagram"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/instagram"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/ig"
                    />
                <ImageButton
                    android:id="@+id/ib_twitter"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/twitter"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/twitter"
                    />
                <ImageButton
                    android:id="@+id/ib_youtube"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/youtube"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/yt"
                    />
                <ImageButton
                    android:id="@+id/ib_website"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/website"
                    android:background="@drawable/web"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>